--- a/style1.css
+++ b/style1.css
@@ -43,7 +43,7 @@ a{
 header{
     width: 100vw;
     height: 100vh;
-    background-image: url(header-bg.png);
+    background-image: url(img/header-bg.png);
     background-size: cover;
     background-position: bottom;
     display: flex;
@@ -114,7 +114,7 @@ section{
 .explore{
     width: 100%;
     height: 80vh;
-    background-image: url(bg2.png);
+    background-image: url(img/bg2.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
